feat: P4ADEV-3434 Implement native API request-export (#109)
