# src/main/java/it/gov/pagopa/pu/sil/mapper/ClassificationsExportFileRequestMapper.java
@@ -4,11 +4,16 @@ import it.gov.pagopa.pu.processexecutions.dto.generated.ClassificationsExportFil
 import it.gov.pagopa.pu.processexecutions.dto.generated.ClassificationsExportFileRequestDTO;
 import it.gov.pagopa.pu.processexecutions.dto.generated.LocalDateIntervalFilter;
 import it.gov.pagopa.pu.sil.util.ConversionUtils;
+import it.veneto.regione.pagamenti.pivot.ente.IdUnivocoRendicontazioneType;
+import it.veneto.regione.pagamenti.pivot.ente.IdUnivocoVersamentoType;
 import it.veneto.regione.pagamenti.pivot.ente.PivotSILPrenotaExportFlussoRiconciliazione;
+import it.veneto.regione.pagamenti.pivot.ente.TipoDovutoType;
 import org.springframework.stereotype.Service;
 
 import javax.xml.datatype.XMLGregorianCalendar;
 import java.time.LocalDate;
+import java.util.HashSet;
+import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -21,9 +26,15 @@ public class ClassificationsExportFileRequestMapper {
       .exportFileType(ClassificationsExportFileRequestDTO.ExportFileTypeEnum.CLASSIFICATIONS)
       .fileVersion(request.getVersioneTracciato())
       .filterFields(new ClassificationsExportFileFilter()
+        .debtPositionTypeOrgCodes(Optional.ofNullable(request.getTipoDovuto())
+          .map(TipoDovutoType::getTipos).map(HashSet::new).orElse(null))
         .label(request.getCodiceClassificazione().getClassificaziones().stream()
           .map(ClassificationsExportFileFilter.LabelEnum::fromValue)
           .collect(Collectors.toSet()))
+        .iuv(Optional.ofNullable(request.getIdUnivocoVersamento())
+          .map(IdUnivocoVersamentoType::getIuvs).orElse(null))
+        .iur(Optional.ofNullable(request.getIdUnivocoRendicontazione())
+          .map(IdUnivocoRendicontazioneType::getIurs).orElse(null))
         .iud(request.getIdUnivocoDovuto())
         .regionValueDate(mapToLocalDateIntervalFilter(request.getDataValutaDa(), request.getDataValutaA()))
         .billDate(mapToLocalDateIntervalFilter(request.getDataContabileDa(), request.getDataContabileA()))
